--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -145,10 +145,10 @@
 
     <div class="button-container">
       <button id="randomPick">
-        <img src="cinefilos/assets/button.png" alt="Random Movie">
+        <img src="Cinefilos/assets/button.png" alt="Random Movie">
       </button>
       <button id="clearHistory">
-        <img src="cinefilos/cinefilos/assets/button2.png" alt="Clear History">
+        <img src="Cinefilos/Cinefilos/assets/button2.png" alt="Clear History">
       </button>
     </div>
   </div>
