--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -148,7 +148,7 @@
         <img src="Cinefilos/assets/button.png" alt="Random Movie">
       </button>
       <button id="clearHistory">
-        <img src="Cinefilos/Cinefilos/assets/button2.png" alt="Clear History">
+        <img src="assets/button2.png" alt="Clear History">
       </button>
     </div>
   </div>
