--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -183,8 +183,8 @@
     const posters = [];
     let currentIdx = 0;
     const apiKey = "225d3569";
-    const FALLBACK_IMG = "assets/posters/fallback.jpg";
-    const localFallback = { tt0134817: "assets/posters/mecanica.jpg" };
+    const FALLBACK_IMG = "posters/fallback.jpg";
+    const localFallback = { tt0134817: "posters/mecanica.jpg" };
 
     async function validateImage(url) {
       return new Promise(res => {
