--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -320,14 +320,14 @@
   </script>
 
   <script>
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('assets/sw.js')
-          .then(reg => console.log('Service Worker registered:', reg))
-          .catch(err => console.error('SW registration failed:', err));
-      });
-    }
-  </script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('assets/sw.js')
+        .then(reg => console.log('SW registered:', reg))
+        .catch(err => console.error('SW error:', err));
+    });
+  }
+</script>
 </body>
 </html>
 
