--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>cinefilos</title>
- 
+
   <link rel="manifest" href="assets/manifest.json">
   <meta name="theme-color" content="#111111">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-title" content="Cinéfilos">
   <meta name="apple-touch-icon" href="assets/icons/icon-192.png">
+
   <style>
     body {
       margin: 0;
@@ -75,18 +76,34 @@
 
     .front {
       position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      border-radius: 8px;
-      background: rgba(255,255,255,0.02);
-      border: 2px solid rgba(255,255,255,0.3);
-      overflow: hidden;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #111;
+      border-radius: 3px;
+      border: 2px solid #444;
       box-shadow:
-        0 4px 12px rgba(0,0,0,0.6),
-        inset 0 0 8px rgba(255,255,255,0.1);
+        0 4px 12px rgba(0, 0, 0, 0.6),
+        3px 0 10px rgba(0, 0, 0, 0.4),
+        inset -4px 0 6px rgba(0, 0, 0, 0.3),
+        inset 0 0 6px rgba(255, 255, 255, 0.05);
+      transform-style: preserve-3d;
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
+    }
+
+    .front::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 10px;
+      height: 100%;
+      background: linear-gradient(to right, #222 0%, #333 100%);
+      box-shadow: inset -1px 0 2px rgba(0, 0, 0, 0.6);
     }
 
     .front img {
@@ -173,7 +190,7 @@
   <ul id="history"></ul>
   <audio id="soundPick" src="assets/sounds/pick.wav"></audio>
 
-  <script src="assets/entries.js"></script>
+  <script src="assets/entries.js?v=1"></script>
   <script>
     const flow = document.getElementById("posterFlow");
     const pickBtn = document.getElementById("randomPick");
@@ -320,15 +337,13 @@
   </script>
 
   <script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('assets/sw.js')
-        .then(reg => console.log('SW registered:', reg))
-        .catch(err => console.error('SW error:', err));
-    });
-  }
-</script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('assets/sw.js')
+          .then(reg => console.log('SW registered:', reg))
+          .catch(err => console.error('SW error:', err));
+      });
+    }
+  </script>
 </body>
 </html>
-
-1:07
