--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -54,6 +54,8 @@
       cursor: pointer;
       opacity: 0;
       transition: transform 0.4s ease, opacity 0.4s ease, z-index 0s;
+      border-radius: 12px;
+      overflow: visible;
     }
 
     .coverflow-container.loaded .poster {
@@ -67,46 +69,61 @@
       transform-style: preserve-3d;
     }
 
+    /* Flip animation & glow/bounce */
+
     .box {
-      width: 100%;
-      height: 100%;
+      width: 150px;
+      height: 225px;
       position: relative;
       transform-style: preserve-3d;
+      transition: transform 0.6s ease;
+      margin: 0 auto;
+      border-radius: 12px;
+      overflow: hidden;
     }
 
     .front {
-      position: absolute;
-      top: 0;
-      left: 0;
       width: 100%;
       height: 100%;
-      background: #111;
       border-radius: 12px;
-      border: 2px solid #444;
-      box-shadow:
-        0 6px 16px rgba(0, 0, 0, 0.6),
-        inset 0 0 8px rgba(255, 255, 255, 0.05);
-      transform-style: preserve-3d;
+      overflow: hidden;
+      border: 2px solid rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.02);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.6), inset 0 0 8px rgba(255,255,255,0.1);
       display: flex;
       align-items: center;
       justify-content: center;
-      overflow: hidden;
     }
 
     .front img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      user-select: none;
       border-radius: 12px;
+      user-select: none;
     }
 
-    .selected .front {
-      border-color: #4fc3f7;
-      box-shadow:
-        0 4px 12px rgba(0,0,0,0.6),
-        0 0 20px #4fc3f7,
-        inset 0 0 8px rgba(255,255,255,0.1);
+    @keyframes flipY {
+      0%   { transform: rotateY(0deg); }
+      50%  { transform: rotateY(180deg); }
+      100% { transform: rotateY(360deg); }
+    }
+
+    @keyframes bounceGlow {
+      0%, 100% {
+        box-shadow: 0 0 12px 2px rgba(79, 195, 247, 0.7);
+        transform: translateY(0);
+      }
+      50% {
+        box-shadow: 0 0 24px 4px rgba(79, 195, 247, 1);
+        transform: translateY(-10px);
+      }
+    }
+
+    .poster.flipped .box {
+      animation: flipY 0.6s ease, bounceGlow 1.2s ease infinite;
+      box-shadow: 0 0 12px 2px rgba(79, 195, 247, 0.7);
+      border-radius: 12px;
     }
 
     .button-container {
@@ -178,7 +195,7 @@
   <ul id="history"></ul>
   <audio id="soundPick" src="assets/sounds/pick.wav"></audio>
 
-  <script src="assets/entries.js?v=1"></script>
+  <script src="assets/entries.js"></script>
   <script>
     const flow = document.getElementById("posterFlow");
     const pickBtn = document.getElementById("randomPick");
@@ -203,6 +220,7 @@
     async function fetchPoster(id) {
       let posterUrl = FALLBACK_IMG;
       let title = id;
+      let runtime = "";
       if (localFallback[id]) {
         posterUrl = await validateImage(localFallback[id]);
       } else {
@@ -211,13 +229,14 @@
           const data = await res.json();
           if (data.Response === "True") {
             title = data.Title;
+            runtime = data.Runtime || "";
             if (data.Poster && data.Poster !== "N/A") {
               posterUrl = await validateImage(data.Poster);
             }
           }
         } catch {}
       }
-      return { id, title, posterUrl };
+      return { id, title, posterUrl, runtime };
     }
 
     function updateCoverflow(addHistory = false) {
@@ -232,9 +251,7 @@
         const x = offset * spacing;
         const rot = -offset * maxTilt;
         const z = offset === 0 ? maxZ : maxZ * (1 - Math.min(Math.abs(offset), 3) / 3);
-        const scale = offset === 0
-          ? 1.1  // Selected poster pops up 10%
-          : Math.max(minScale, 1 - Math.abs(offset) * scaleStep);
+        const scale = Math.max(minScale, 1 - Math.abs(offset) * scaleStep);
         const zidx = offset === 0 ? 3000 : 1000 - Math.abs(offset);
 
         p.element.style.transform = `
@@ -253,6 +270,7 @@
             const li = document.createElement("li");
             li.innerHTML = `
               <div style="font-weight:bold;">${p.title}</div>
+              <div style="font-size: 14px; opacity: 0.8;">${p.runtime}</div>
               <img src="${p.posterUrl}" alt="${p.title}">
             `;
             historyList.prepend(li);
@@ -277,6 +295,7 @@
         posters.push({ ...m, element: div });
 
         div.addEventListener("click", () => {
+          posters.forEach(p => p.element.classList.remove("flipped"));
           currentIdx = i;
           updateCoverflow(false);
         });
@@ -289,9 +308,16 @@
       }, 100);
 
       window.addEventListener("keydown", e => {
-        if (e.key === "ArrowLeft" && currentIdx > 0) currentIdx--;
-        if (e.key === "ArrowRight" && currentIdx < posters.length - 1) currentIdx++;
-        updateCoverflow(false);
+        if (e.key === "ArrowLeft" && currentIdx > 0) {
+          posters.forEach(p => p.element.classList.remove("flipped"));
+          currentIdx--;
+          updateCoverflow(false);
+        }
+        if (e.key === "ArrowRight" && currentIdx < posters.length - 1) {
+          posters.forEach(p => p.element.classList.remove("flipped"));
+          currentIdx++;
+          updateCoverflow(false);
+        }
       });
 
       let startX = 0, isDragging = false;
@@ -305,8 +331,13 @@
         if (isDragging) {
           const deltaX = e.touches[0].clientX - startX;
           if (Math.abs(deltaX) > 50) {
-            if (deltaX > 0 && currentIdx > 0) currentIdx--;
-            else if (deltaX < 0 && currentIdx < posters.length - 1) currentIdx++;
+            if (deltaX > 0 && currentIdx > 0) {
+              posters.forEach(p => p.element.classList.remove("flipped"));
+              currentIdx--;
+            } else if (deltaX < 0 && currentIdx < posters.length - 1) {
+              posters.forEach(p => p.element.classList.remove("flipped"));
+              currentIdx++;
+            }
             updateCoverflow(false);
             isDragging = false;
           }
@@ -315,12 +346,16 @@
       flow.addEventListener("touchend", () => isDragging = false);
 
       pickBtn.addEventListener("click", () => {
+        posters.forEach(p => p.element.classList.remove("flipped"));
         currentIdx = Math.floor(Math.random() * posters.length);
+        posters[currentIdx].element.classList.add("flipped");
         soundPick.play();
         updateCoverflow(true);
       });
 
-      clearBtn.addEventListener("click", () => historyList.innerHTML = "");
+      clearBtn.addEventListener("click", () => {
+        historyList.innerHTML = "";
+      });
     }
 
     init();
