--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -184,10 +184,10 @@
 
     <div class="button-container">
       <button id="randomPick">
-        <img src="assets/Button.PNG" alt="Random Movie">
+        <img src="assets/Button2.PNG" alt="Random Movie">
       </button>
       <button id="clearHistory">
-        <img src="assets/Button2.PNG" alt="Clear History">
+        <img src="assets/Button.PNG" alt="Clear History">
       </button>
     </div>
   </div>
