--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -253,7 +253,7 @@ button:hover {
   <ul id="history"></ul>
   <audio id="soundPick" src="assets/sounds/pick.wav"></audio>
 
-<!----------------------------------------------------------------------------------------------------script---------------------------------------------------------------------------------------------------------------------->
+<!-------------------------------------------------------------------------------------------------------script---------------------------------------------------------------------------------------------------------------------->
 
 <script src="assets/entries.js"></script>
 <script>
@@ -266,18 +266,18 @@ button:hover {
   let currentIdx = 0;
   const apiKey = "225d3569";
   const FALLBACK_IMG = "posters/fallback.jpg";
-
+// forced posters
   const localFallback = {
     "tt0134817": "posters/mecanica.jpg",
     "tt26675379": "posters/vitoria.jpg",
     "tt0896690": "posters/miedo.jpg",
   };
-
+//forced titles
   const forcedTitles = {
-    "tt0134817": "La Mecánica del Corazón",
+    "tt0134817": "Mecánica Nacional",
     "tt26675379": "Vitória"
   };
-
+//forced runtime
   const forcedRuntime = {
     "tt0134817": "95 min", //mecanica nacional
     "tt26675379": "112 min" //vitoria
