--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>cinefilos</title>
@@ -40,7 +42,7 @@
       height: 350px;
       margin: 30px 0 40px;
       overflow-x: hidden;
-      -webkit-box-reflect: below 8px linear-gradient(transparent, rgba(255,255,255,0.1));
+      -webkit-box-reflect: below 1px linear-gradient(transparent, rgba(255,255,255,0.3));
     }
 
     .poster {
@@ -100,6 +102,7 @@
 
 
 
+
     /* Flip animation & glow/bounce */
 
     .box {
@@ -141,7 +144,7 @@
       100% { transform: rotateY(360deg); }
     }
 
-    @keyframes bounceGlow {
+     @keyframes bounceGlow {
       0%, 100% {
         box-shadow: 0 0 12px 2px rgba(79, 195, 247, 0.7);
         transform: translateY(0);
@@ -228,6 +231,11 @@ button:hover {
   100% { transform: scale(1); }
 }
 
+.poster:hover,
+.poster:focus {
+  transform: scale(2.5);
+  filter: brightness(1.1);
+}
 
   </style>
 </head>
@@ -254,227 +262,11 @@ button:hover {
   <audio id="soundPick" src="assets/sounds/pick.wav"></audio>
 
 <!-------------------------------------------------------------------------------------------------------script---------------------------------------------------------------------------------------------------------------------->
-
-<script src="assets/entries.js"></script>
-<script>
-  const flow = document.getElementById("posterFlow");
-  const pickBtn = document.getElementById("randomPick");
-  const clearBtn = document.getElementById("clearHistory");
-  const historyList = document.getElementById("history");
-  const soundPick = document.getElementById("soundPick");
-  const posters = [];
-  let currentIdx = 0;
-  const apiKey = "225d3569";
-  const FALLBACK_IMG = "posters/fallback.jpg";
-// forced posters
-  const localFallback = {
-    "tt0134817": "posters/mecanica.jpg",
-    "tt26675379": "posters/vitoria.jpg",
-    "tt0896690": "posters/miedo.jpg",
-  };
-//forced titles
-  const forcedTitles = {
-    "tt0134817": "Mecánica Nacional",
-    "tt26675379": "Vitória"
-  };
-//forced runtime
-  const forcedRuntime = {
-    "tt0134817": "95 min", //mecanica nacional
-    "tt26675379": "112 min" //vitoria
-  };
-
-  async function validateImage(url) {
-    return new Promise(res => {
-      const img = new Image();
-      img.onload = () => res(url);
-      img.onerror = () => res(FALLBACK_IMG);
-      img.src = url;
-    });
-  }
-
-  const fetchPoster = async (id) => {
-    let posterUrl = FALLBACK_IMG;
-    let title = "";
-    let runtime = "";
-
-    try {
-      const res = await fetch(`https://www.omdbapi.com/?apikey=${apiKey}&i=${id}`);
-      const data = await res.json();
-      if (data.Response === "True") {
-        title = forcedTitles[id] || data.Title;
-        runtime = forcedRuntime[id] || data.Runtime || "";
-        posterUrl = await validateImage(localFallback[id] || data.Poster || FALLBACK_IMG);
-      } else {
-        title = forcedTitles[id] || id;
-        runtime = forcedRuntime[id] || "";
-        posterUrl = await validateImage(localFallback[id] || FALLBACK_IMG);
-      }
-    } catch {
-      title = forcedTitles[id] || id;
-      runtime = forcedRuntime[id] || "";
-      posterUrl = await validateImage(localFallback[id] || FALLBACK_IMG);
-    }
-
-    return { id, title, posterUrl, runtime };
-  };
-
-  function updateCoverflow(addHistory = false) {
-    const spacing = 150;
-    const maxTilt = 45;
-    const maxZ = 150;
-    const minScale = 0.7;
-    const scaleStep = 0.15;
-
-    posters.forEach((p, i) => {
-      const offset = i - currentIdx;
-      const x = offset * spacing;
-      const rot = -offset * maxTilt;
-      const z = offset === 0 ? maxZ : maxZ * (1 - Math.min(Math.abs(offset), 3) / 3);
-      const scale = Math.max(minScale, 1 - Math.abs(offset) * scaleStep);
-      const zidx = offset === 0 ? 3000 : 1000 - Math.abs(offset);
-
-      p.element.style.transform = `
-        translate(-50%, -50%)
-        translateX(${x}px)
-        translateZ(${z}px)
-        rotateY(${rot}deg)
-        scale(${scale})
-      `;
-      p.element.style.zIndex = zidx;
-      p.element.classList.toggle("selected", i === currentIdx);
-
-      if (addHistory && i === currentIdx) {
-        const exists = [...historyList.children].some(li => li.textContent.includes(p.title));
-        if (!exists) {
-          const li = document.createElement("li");
-          li.innerHTML = `
-            <div style="font-weight:bold;">${p.title}</div>
-            <div style="font-size: 14px; opacity: 0.8;">${p.runtime}</div>
-            <img src="${p.posterUrl}" alt="${p.title}">
-          `;
-          historyList.prepend(li);
-        }
-      }
-    });
-  }
-
-  async function init() {
-    const movies = await Promise.all(entries.map(e => fetchPoster(e.imdbID)));
-    movies.forEach((m, i) => {
-      const div = document.createElement("div");
-      div.className = "poster";
-      div.innerHTML = `
-        <div class="box">
-          <div class="front">
-            <img src="${m.posterUrl}" alt="${m.title}">
-          </div>
-        </div>
-      `;
+<script src="assets/entries.js" defer></script>
+<script src="assets/script.js" defer></script>
 
 
-      flow.appendChild(div);
-      posters.push({ ...m, element: div });
 
-      div.addEventListener("click", () => {
-        posters.forEach(p => p.element.classList.remove("flipped"));
-        currentIdx = i;
-        updateCoverflow(false);
-      });
-    });
-
-    currentIdx = Math.floor(posters.length / 2);
-    setTimeout(() => {
-      document.querySelector('.coverflow-container').classList.add('loaded');
-      updateCoverflow(false);
-    }, 100);
-
-    window.addEventListener("keydown", e => {
-      if (e.key === "ArrowLeft" && currentIdx > 0) {
-        posters.forEach(p => p.element.classList.remove("flipped"));
-        currentIdx--;
-        updateCoverflow(false);
-      }
-      if (e.key === "ArrowRight" && currentIdx < posters.length - 1) {
-        posters.forEach(p => p.element.classList.remove("flipped"));
-        currentIdx++;
-        updateCoverflow(false);
-      }
-    });
-
-    let startX = 0, isDragging = false;
-    flow.addEventListener("touchstart", e => {
-      if (e.touches.length === 1) {
-        isDragging = true;
-        startX = e.touches[0].clientX;
-      }
-    });
-    flow.addEventListener("touchmove", e => {
-      if (isDragging) {
-        const deltaX = e.touches[0].clientX - startX;
-        if (Math.abs(deltaX) > 50) {
-          if (deltaX > 0 && currentIdx > 0) {
-            posters.forEach(p => p.element.classList.remove("flipped"));
-            currentIdx--;
-          } else if (deltaX < 0 && currentIdx < posters.length - 1) {
-            posters.forEach(p => p.element.classList.remove("flipped"));
-            currentIdx++;
-          }
-          updateCoverflow(false);
-          isDragging = false;
-        }
-      }
-    });
-    flow.addEventListener("touchend", () => isDragging = false);
-
-const pickedIds = new Set();
-
-pickBtn.addEventListener("click", () => {
-  if (pickedIds.size === posters.length) {
-    alert("All movies have been picked!");
-    return;
-  }
-
-  let idx;
-  do {
-    idx = Math.floor(Math.random() * posters.length);
-  } while (pickedIds.has(posters[idx].id));
-
-  pickedIds.add(posters[idx].id);
-
-  posters.forEach(p => p.element.classList.remove("flipped"));
-  currentIdx = idx;
-  posters[currentIdx].element.classList.add("flipped");
-  soundPick.play();
-  updateCoverflow(true);
-});
-  }
-
-  init();
-</script>
-
-<script>
-  if ('serviceWorker' in navigator) {
-    window.addEventListener('load', () => {
-      navigator.serviceWorker.register('assets/sw.js')
-        .then(reg => console.log('SW registered:', reg))
-        .catch(err => console.error('SW error:', err));
-    });
-  }
-
-  document.querySelectorAll("button").forEach(btn => {
-    btn.addEventListener("click", () => {
-      btn.classList.add("pressed");
-      setTimeout(() => btn.classList.remove("pressed"), 100);
-    });
-  });
-
-clearBtn.addEventListener("click", () => {
-  historyList.innerHTML = ""; // optional if you're reloading
-  location.reload(); // refreshes the page
-});
-
-
-</script>
 
 </body>
 </html>
