--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -241,7 +241,9 @@ button:hover {
 </head>
 <body>
 
+    <a href="index2.html">
   <img src="assets/cinefilos.png" alt="Cinefilos" class="header-image">
+</a>
 
   <div class="centered-container">
     <div class="coverflow-container">
