--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -7,11 +7,20 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>cinefilos</title>
 
-  <link rel="manifest" href="assets/manifest.json">
-  <meta name="theme-color" content="#111111">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Cinéfilos">
-  <meta name="apple-touch-icon" href="assets/icons/icon-192.png">
+<!-- Manifest -->
+<link rel="manifest" href="assets/manifest.json">
+
+<!-- Theme Color -->
+<meta name="theme-color" content="#111111">
+
+<!-- Chrome / Android -->
+<meta name="mobile-web-app-capable" content="yes">
+
+<!-- iOS Safari (still supported for now) -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-title" content="Cinéfilos">
+<meta name="apple-touch-icon" href="assets/icons/icon-192.png">
+
 
   <style>
     body {
