--- a/Cinefilos/index.html
+++ b/Cinefilos/index.html
@@ -273,6 +273,9 @@ button:hover {
   <audio id="soundPick" src="assets/sounds/pick.wav"></audio>
 
 <!-------------------------------------------------------------------------------------------------------script---------------------------------------------------------------------------------------------------------------------->
+<script src="assets/posters.js" defer></script>
+<script src="assets/runtime.js" defer></script>
+<script src="assets/titles.js" defer></script>
 <script src="assets/entries.js" defer></script>
 <script src="assets/script.js" defer></script>
 
