--- a/Cinefilos/index2.html
+++ b/Cinefilos/index2.html
@@ -276,7 +276,7 @@ button:hover {
 <script src="assets/posters.js" defer></script>
 <script src="assets/runtime.js" defer></script>
 <script src="assets/titles.js" defer></script>
-<script src="assets/entries.js" defer></script>
+<script src="assets/entries2.js" defer></script>
 <script src="assets/script.js" defer></script>
 
 
